testdata/verify/error.txtar
# Repo without GitHub Actions
! exec ghasum verify no-actions/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'ghasum has not yet been initialized'

# Uninitialized repo with GitHub Actions
! exec ghasum verify uninitialized/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'ghasum has not yet been initialized'

# Sumfile with syntax error in headers
! exec ghasum verify sumfile-syntax-headers/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'sumfile headers are invalid'
stderr 'invalid header on line 2'

# Sumfile with syntax error in entries
! exec ghasum verify sumfile-syntax-entries/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'syntax error on line 3'

# Sumfile with duplicate headers
! exec ghasum verify sumfile-duplicate-headers/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'sumfile headers are invalid'
stderr 'duplicate header "foo" on line 3'

# Sumfile with duplicate entries
! exec ghasum verify sumfile-duplicate-entries/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'checksums are corrupted'
stderr 'duplicate entry found'

# Invalid workflow
! exec ghasum verify invalid-workflow/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'could not parse workflow'
stderr '.github/workflows/workflow.yml'

# Directory not found
! exec ghasum verify directory-not-found/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'no such file or directory'

# Workflow not found
! exec ghasum verify initialized/.github/workflows/not-found.yml
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'no such file or directory'

# Job not found
! exec ghasum verify initialized/.github/workflows/workflow.yml:not-found
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'job "not-found" not found in workflow ".github/workflows/workflow.yml"'

# Offline cache entry missing
! exec ghasum verify -cache .cache/ -offline not-cached/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'missing ".cache/actions/checkout/not-cached" from cache'

-- initialized/.github/workflows/gha.sum --
version 1

actions/checkout@v4 Xl8z/l21IIpcBDsjpnq7jsBPk/RY26RwvDVL8FrajmE=
-- initialized/.github/workflows/workflow.yml --
name: Example workflow
on: [push]

jobs:
  example:
    name: example
    runs-on: ubuntu-22.04
    steps:
    - name: Checkout repository
      uses: actions/checkout@v4
-- invalid-workflow/.github/workflows/gha.sum --
version 1

actions/checkout@v4 Xl8z/l21IIpcBDsjpnq7jsBPk/RY26RwvDVL8FrajmE=
-- invalid-workflow/.github/workflows/workflow.yml --
name: Faulty workflow
on: [push]

jobs:
  example:
    name: example
    runs-on: ubuntu-22.04
    steps:
  - name: Checkout repository
    uses: actions/checkout@v4
-- no-actions/.keep --
This file exists to create a repo that does not use Github Actions.
-- not-cached/.github/workflows/gha.sum --
version 1

actions/checkout@not-cached b5283HfgB+lTEWTnN3iPEmkOQk+7FBHUMOHw3GjR4M4=
-- not-cached/.github/workflows/workflow.yml --
name: Example workflow
on: [push]

jobs:
  example:
    name: example
    runs-on: ubuntu-22.04
    steps:
    - name: Checkout repository
      uses: actions/checkout@not-cached
-- sumfile-duplicate-entries/.github/workflows/gha.sum --
version 1

actions/checkout@v4 rfcqiYqRAnhqMjwnw/oJp2lqI5zRjHTtu2vQ9/ss4x0=
actions/checkout@v4 oJp2lqI5zRjHTtu2vQ9/rfcqiYqRAnhqMjwnw/ss4x0=
-- sumfile-duplicate-headers/.github/workflows/gha.sum --
version 1
foo bar
foo bar
-- sumfile-syntax-entries/.github/workflows/gha.sum --
version 1

this-action/is-missing@a-checksum
-- sumfile-syntax-headers/.github/workflows/gha.sum --
version 1
foobar
-- uninitialized/.github/workflows/workflow.yml --
name: Example workflow
on: [push]

jobs:
  example:
    name: example
    runs-on: ubuntu-22.04
    steps:
    - name: Checkout repository
      uses: actions/checkout@v4
    - name: Install Go
      uses: actions/setup-go@v5
      with:
        go-version-file: go.mod
    - name: This step does not use an action
      run: Echo 'hello world!'
